// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> renders the <Form /> with an error 1`] = `
<div
  class="form__Container-sc-7952rh-0 kkOuFr"
>
  <div
    class="form__Error-sc-7952rh-1 dePsoc"
  >
    Your email address is already being used
  </div>
  <button
    class="form__Submit-sc-7952rh-8 eEdKSg"
    type="submit"
  >
    Sign In
  </button>
</div>
`;

exports[`<Form /> renders the <Form /> with populated data 1`] = `
<div
  class="form__Container-sc-7952rh-0 kkOuFr"
>
  <h1
    class="form__Title-sc-7952rh-3 cKBDVR"
  >
    Sign In Now
  </h1>
  <form
    class="form__Base-sc-7952rh-2 huEoKC"
  >
    <input
      class="form__Input-sc-7952rh-7 krRUWd"
      placeholder="Email address"
    />
    <input
      class="form__Input-sc-7952rh-7 krRUWd"
      placeholder="Password"
      type="password"
    />
    <button
      class="form__Submit-sc-7952rh-8 eEdKSg"
      disabled=""
      type="submit"
    >
      Sign In
    </button>
  </form>
  <p
    class="form__TextSmall-sc-7952rh-5 drVMew"
  >
    This page is protected by Google reCAPTCHA to ensure you're not a bot. Learn more.
  </p>
</div>
`;
